2005-01-02  Emmanuele Bassi  <ebassi@cvs.gnome.org> 

	* src/gdict-app.c: (gdict_app_init): Set execute bit (0700).
	* src/gdict-applet.c: (gdict_applet_init):  Set execute bit (0700).
	* src/gdict-pref-dialog.c: (source_remove_clicked_cb): UI fix
	for remove source confirmation dialog (patch by Dennis Cranston, fixes
	bug #325455).

2005-12-31  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-window.c (gdict_window_help_contents_cmd): remove the help
	document id.

2005-12-31  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/GNOME_DictionaryApplet.server.in.in: update Bugzilla product to
	"gdict-applet", to disambiguate the applet from the main application;
	update the icon name to the new icon.

	* src/gdict-applet.c: fix the applet and make it work again.

	* src/gdict-pref-dialog.c (response_cb),
	(gdict_pref_dialog_init): intercept the HELP response code and show
	the help without closing the dialog.

2005-12-31  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/gnome-dictionary-preferences.glade:  HIG fixes for
	the add source dialog.  Do not use bold labels.  Use left
	alignment for labels.  Fix the 'H' key mnemonic conflict.  
	Use sentence capitalization for the expander label and indent 
	its contents (patch by Dennis Cranston, closes bug #325340).

2005-12-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* data/gnome-dictionary.1: final touches to the man page.

2005-12-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-pref-dialog.c (font_button_font_set_cb),
	(gdict_pref_dialog_gconf_notify_cb): brown paper bag fix for
	propagating the print font through GConf (while avoiding loops).

2005-12-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-pref-dialog.c (font_button_font_set_cb): tighter checks on
	the fonts to prevent a segmentation fault.

2005-12-30  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* src/gdict-source-dialog.c (gdict_source_dialog_constructor): switch
	the cancel and add buttons.
