@@ -1,3 +1,9 @@
+2005-01-02  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* src/gdict-app.h:
+	* src/gdict-app.c: enable look up via command-line (closes bug
+	#325014).
+
 2005-01-02  Emmanuele Bassi  <ebassi@cvs.gnome.org> 
 
 	* src/gdict-app.c: (gdict_app_init): Set execute bit (0700).
